[gd_scene load_steps=4 format=3 uid="uid://ct0d7ksx5y7hg"]

[ext_resource type="Script" path="res://hud/PawnDebug/health_manager.gd" id="1_vo2li"]
[ext_resource type="Script" path="res://hud/Classes/NumberInput/NumberInput.gd" id="2_aas8q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erpws"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.188235, 0.188235, 0.188235, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="HealthManager" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -301.0
offset_bottom = 379.0
grow_horizontal = 0
focus_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_erpws")
script = ExtResource("1_vo2li")

[node name="_" type="Control" parent="."]
layout_mode = 2

[node name="Target" type="RichTextLabel" parent="_"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Target:"
fit_content = true
scroll_active = false

[node name="Option" type="OptionButton" parent="_/Target"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
item_count = 3
selected = 0
popup/item_0/text = "Health"
popup/item_0/id = 0
popup/item_1/text = "Stagger"
popup/item_1/id = 1
popup/item_2/text = "Shield"
popup/item_2/id = 2

[node name="Math" type="RichTextLabel" parent="_"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 27.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Math:"
fit_content = true
scroll_active = false

[node name="Option" type="OptionButton" parent="_/Math"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
item_count = 5
selected = 0
popup/item_0/text = "Set"
popup/item_0/id = 0
popup/item_1/text = "Flat"
popup/item_1/id = 1
popup/item_2/text = "Max%"
popup/item_2/id = 2
popup/item_3/text = "Missing%"
popup/item_3/id = 3
popup/item_4/text = "Current%"
popup/item_4/id = 4

[node name="Type" type="RichTextLabel" parent="_"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 95.0
offset_bottom = 118.0
grow_horizontal = 2
text = "Type:"
fit_content = true
scroll_active = false

[node name="Option" type="OptionButton" parent="_/Type"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
item_count = 1
selected = 0
popup/item_0/text = "Code"
popup/item_0/id = 0

[node name="Element" type="RichTextLabel" parent="_"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 122.0
offset_bottom = 145.0
grow_horizontal = 2
text = "Element:"
fit_content = true
scroll_active = false

[node name="Option" type="OptionButton" parent="_/Element"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
item_count = 1
selected = 0
popup/item_0/text = "Code"
popup/item_0/id = 0

[node name="MaxHP" type="RichTextLabel" parent="_"]
layout_mode = 0
offset_top = 215.0
offset_right = 274.0
offset_bottom = 238.0
bbcode_enabled = true
text = "Max HP: [color=green]100"
fit_content = true
scroll_active = false

[node name="HPChange" type="RichTextLabel" parent="_"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 245.0
offset_bottom = 268.0
grow_horizontal = 2
bbcode_enabled = true
text = "[color=yellow] 50 [color=white] => [color=red] 25"
fit_content = true

[node name="Button" type="Button" parent="_"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.5
offset_top = -31.0
offset_right = 35.5
grow_horizontal = 2
grow_vertical = 0
text = "Confirm"

[node name="NumberInput" type="TextEdit" parent="_"]
layout_mode = 0
offset_top = 166.0
offset_right = 180.0
offset_bottom = 205.0
placeholder_text = "Amount"
script = ExtResource("2_aas8q")

[connection signal="focus_entered" from="_" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="_" to="." method="_on_focus_exited"]
[connection signal="item_selected" from="_/Math/Option" to="." method="_on_option_item_selected"]
[connection signal="text_changed" from="_/NumberInput" to="." method="inputs_changed"]
